# macabacus_assessment

./: NOTES.md  README.md  main.py  pyproject.toml
models/: task.py
routers/: tasks.py
tests/: conftest.py  test_tasks.py
